--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ div{
     padding: 25px;
     margin: 10px;
     box-shadow: inset;
-    background-color: 00ffaa;
-    background-image: -moz-repeating-radial-gradient(blue);
+    background-color: green;
+    background-image: url("taobg.jpg");
 }
 h1{
     font-family: 'Courier New', Courier, monospace;
