--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
+body{
+    background-image: url("taobg.jpg");
+}
+    
 div{
     border: blue;
     padding: 25px;
     margin: 10px;
-    box-shadow: inset;
+    box-shadow: 5px;
     background-color: green;
-    background-image: url("taobg.jpg");
+    
 }
 h1{
     font-family: 'Courier New', Courier, monospace;
