--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,38 @@
-body{
+body {
     background-image: url("taobg.jpg");
+    background-size: cover;
 }
-    
-div{
-    width: auto;
-    position:center;
-    border: blue;
-    padding: 25px;
+
+div {
+    width: min-content;
     margin: 10px;
-    box-shadow: 5px;
+    border: 5px solid blue;
+    padding: 25px;
+    box-shadow: 5px 10px orange;
     background-color: green;
-    
 }
-h1{
+
+h1 {
     font-family: 'Courier New', Courier, monospace;
 }
 
-h2{
+h2 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-h3{
+h3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-H4{
+H4 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-h5{
+h5 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h6{
+h6 {
     font-family: 'Times New Roman', Times, serif;
 }
 
