--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("taobg.jpg");
+    background-image: url("—Pngtree—black minimalist atmospheric wooden background_965794.jpg");
     background-size: cover;
 }
 
