--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("—Pngtree—black minimalist atmospheric wooden background_965794.jpg");
+    background-image: url("https://raw.githubusercontent.com/HippieTaoist/css-interview/main/%E2%80%94Pngtree%E2%80%94black%20minimalist%20atmospheric%20wooden%20background_965794.jpg");
     background-size: cover;
 }
 
